5.3_log_app_the_service_mesh_edition/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: src-1-log-output
  namespace: exercises
  labels:
    app: src-1-log-output
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: src-1-log-output
  template:
    metadata:
      name: src-1-log-output
      labels:
        app: src-1-log-output
        version: 1.0.0
    spec:
      volumes:
        - name: log-output-config
          configMap:
            name: log-output-config
            items:
              - key: message.env
                path: message.env
      containers:
        - name: src-1-log-output
          image: elango5292/src-1-log-output:v6
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
          volumeMounts:
            - name: log-output-config
              mountPath: /etc/config
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: src-2-pingpong
  namespace: exercises
  labels:
    app: src-2-pingpong
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: src-2-pingpong
  template:
    metadata:
      name: src-2-pingpong
      labels:
        app: src-2-pingpong
        version: 1.0.0
    spec:
      containers:
        - name: src-2-pingpong
          image: elango5292/src-2-pingpong:v8
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
