5.3_log_app_the_service_mesh_edition/manifests/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: exercises
spec:
  selector:
    app: postgres-db
  clusterIP: None
  ports:
    - name: db-port
      port: 5432
      targetPort: 5432
